[package]
name = "uisp-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
dotenvy = "0.15.7"
env_logger = "0.11.2"
lazy_static = "1.4.0"
listenfd = "1.0.1"
log = "0.4.20"
r2d2 = "0.8.10"
redis = { version = "0.24.0", features = ["r2d2"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
